add blog functions
